# SharedKernel.Python

./: .gitignore  README.md  azure-pipelines.yml  pyproject.toml  pytest.ini  ruff.toml
scripts/: UpdateVersion.ps1
src/: Entity.py  Error.py  ErrorType.py  ValueObject.py  __init__.py
src/monads/: Maybe.py  Result.py  ResultT.py  __init__.py
src/richillcapital_shared_kernel/: DomainEvent.py  Error.py  __init__.py
src/richillcapital_shared_kernel/monads/: Maybe.py  ResultT.py
src/shared_kernel/: Error.py
src/shared_kernel/monads/: ErrorOr.py  Result.py  __init__.py
tests/: EntityTests.py  ErrorTests.py  SingleValueObjectTests.py  ValueObjectTests.py  test_error.py
tests/monads/: ErrorOrTests.py  MaybeTests.py  ResultTTests.py  ResultTests.py
